module-3/lucee: fix datasource activity to use Application.cfc, align task check with lucee_ds_check.cfm, restore terminal-lucee-200 image, remove broken cfconfig and localhost URL instructions
module-4/performance: add JVM heap intro (what/why/who), update config values to match actual lab VM (256m/512m/ParallelGC), document --add-opens boilerplate, add curl response times screenshot to hint box

module-4/security: add cf-admin-headers screenshot